# Global_AI_SDG_Index

./: .gitignore  LICENSE  README.md  output.html  pyproject.toml  requirements.lock.txt  requirements.txt  tesla_2014_050.json  tesla_2014_062.json  tesla_2014_070.json  tesla_2014_072.json  tesla_2014_075.json
src/analysis/: clean.py  clean_frq.py  clsfd.py  countries.py  freq.py  frequency.py  init_freq.py  merge.py
src/analysis_zh/: compare.py  regex_filter.py  regex_filter_en.py  sem_filter_de.py  sem_filter_en.py  sem_filter_zh.py
src/classification/: classification_gpt41.py  gpt1.py  index.py  validation.py
src/extract/: README_extract.md  check_non_ascii.py  lang_doc_ocr.py  non_ascii_check.py  pdf2text.py  translate_non_ascii.py
src/index/: merge.py
src/ocr/: docling.py  lang_doc_ocr.py
src/plots/: clsfd.py  country.py  revenue.py  sector.py  sector_per_country.py  test.py  year.py
src/preprocessing/: check_non_ascii.py  clean_pdfs.py  del_ascii.py  doc2text.py  lang_doc_ocr.py  pdf2text.py  progress.py  tests.py
src/rag/: pipeline.py
src/results/: classified.csv  counts.csv  frequency.csv  frequency_expanded.csv  initial_freq.csv  merged_data.json  results.csv  results_0.csv  results_unclassified.csv
src/retrieval/: gpt1.py  keyword_similarity.py  regex_filter.py  ret_emb_semantic.py  ret_embedding.py  ret_regex.py  semantic_filter.py  validate.py
src/retrieval_legacy/: gpt1.py  keyword_similarity.py  keywords.py  ret_emb_semantic.py  ret_embedding.py  ret_regex.py
src/retrievalv2/: chunks.py  keys.py  regex_filter.py  semantic_filter.py  (+1 more)
(+57 files in other folders)
